# portfolio-repo

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_process.sh  functions.cpp  functions.h  main_script.cpp  start_sim.sh
01_project-md-simulation/: README.md  calculate_msd_isf.py  plotting_msd_isf.py
02-project-pde-solver/: README.md
02-project-pde-solver/Data_for_visualization/Linear/times_001_gamma_0p00/: results_timestep_1.txt
02-project-pde-solver/Data_for_visualization/Linear/times_001_gamma_0p10/: results_timestep_1.txt
02-project-pde-solver/Data_for_visualization/Linear/times_001_gamme_0p01/: results_timestep_1.txt  results_timestep_1.vtk
02-project-pde-solver/Data_for_visualization/Linear/times_010_gamma_0p00/: results_timestep_1.txt  results_timestep_1.vtk  results_timestep_2.txt  results_timestep_2.vtk  results_timestep_3.txt  results_timestep_4.txt  (+3 more)
02-project-pde-solver/project/: build_process.sh  functions.cpp  main_script.cpp  start_sim.sh
02-project-pde-solver/reference_results/: results_timestep_10.txt  results_timestep_2.vtk  results_timestep_3.vtk  results_timestep_5.vtk  results_timestep_7.txt
project-01-md-simulation/: calculate_van_hove_self.py  calculating_rdf_CN.py  collect_all_data.sh  create_directory_temp_variation.sh  plotting_vhs.py  run_cluster.sh  run_directory.sh  xy_density.py
project-02-pde-solver/: README.md
project-02-pde-solver/project/: CMakeLists.txt  dockerfile
project-02-pde-solver/reference_results/: results_timestep_5.txt  results_timestep_6.txt  results_timestep_7.vtk  results_timestep_9.vtk
(+940 files in other folders)
